@@ -1,3 +1,9 @@
+2001-10-12  Ross Johnson  <rpj@setup1.ise.canberra.edu.au>
+
+	* spin.c (pthread_spin_unlock): Was not returning
+	EPERM if the spinlock was not locked, for multi CPU
+	machines.
+
 2001-10-08  Ross Johnson  <rpj@setup1.ise.canberra.edu.au>
 
 	* spin.c (pthread_spin_trylock): Was not returning
